# setlist-maker

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
docs/plans/: 2026-02-01-waveform-implementation.md  2026-02-01-waveform-visualization-design.md  2026-02-27-processing-summary-design.md  2026-02-27-stage-picker-design.md
setlist_maker/: __init__.py  __main__.py  artwork.py  chapters.py  cli.py  editor.py  processor.py  stage_picker.py  waveform.py
tests/: __init__.py  conftest.py  test_artwork.py  test_chapters.py  test_cli.py  test_editor.py  test_processor.py  test_waveform.py
